--- a/home_credit.ipynb
+++ b/home_credit.ipynb
@@ -41,7 +41,25 @@
    "cell_type": "markdown",
    "source": [
     "## Entendimiento del negocio\n",
-    "PAra entender esta competencia hay que entender que es un \"Home Credit\" es"
+    "PAra entender esta competencia hay que entender que es \"Home Credit\" y que es lo que nos pide el reto"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Reto\n",
+    "El reto es generar el riesgo de posibles clientes, a manera de que los proveedores de finanzas puedan aceptar más préstamos, sobre todo a gente de edad temprana, gente que prefiere usar cash, lo que no les ha permitido generar un historial crediticio, nuestro deber es determinar de manera precisa si estos clientes pueden pagar o no.\n",
+    "Es importante tener en cuenta que el comportamiento de los clientes cambia constantemente por lo que es importante que se puede actualizar, haciendo que el modelo sea estable, con el tiempo.\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Empresa\n",
+    "Home Credit es una institución financiera internacional que se especializa en la concesión de préstamos no garantizados a consumidores que típicamente tienen un acceso limitado a los servicios bancarios tradicionales. Fundada en 1997 en la República Checa, la compañía ha expandido sus operaciones a través de Europa, Asia y los Estados Unidos, ofreciendo una gama de productos financieros que incluyen préstamos al consumo, tarjetas de crédito y financiamiento en puntos de venta.\n",
+    "La misión principal de Home Credit es proporcionar préstamos accesibles y sencillos a clientes que no tienen un historial crediticio extenso o que están excluidos del sistema bancario tradicional. Esto permite a más personas acceder a financiamiento para bienes de consumo y otros gastos personales, fomentando la inclusión financiera.\n"
    ]
   },
   {
