--- a/home_credit.ipynb
+++ b/home_credit.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "source": [
     "## Entendimiento del negocio\n",
-    "PAra entender esta competencia hay que entender que es \"Home Credit\" y que es lo que nos pide el reto"
+    "Para entender esta competencia hay que entender que es \"Home Credit\" y que es lo que nos pide el reto:"
    ]
   },
   {
@@ -64,9 +64,17 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Procesamiento y entendimiento de datos"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T20:34:40.136078Z",
+     "start_time": "2024-05-26T20:34:40.114227Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 17,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -75,7 +83,9 @@
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "dataPath = \"home-credit-credit-risk-model-stability/\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 30
   },
   {
    "cell_type": "code",
